# starter

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  build.sh  clean.sh  run.sh
.github/workflows/: CI.yml
docs/: README.md
src/: Main.cxx  Object.cxx  Object.hxx
